🐛️ Fix fonts are broken in emails (Closes #167)

--- a/public/global.css
+++ b/public/global.css
@@ -1,53 +1,4 @@
-/* space-grotesk-500 - latin-ext_latin */
-@font-face {
-	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-	font-family: 'Space Grotesk';
-	font-style: normal;
-	font-weight: 500;
-	src: url('../fonts/space-grotesk-v15-latin-ext_latin-500.eot'); /* IE9 Compat Modes */
-	src: url('../fonts/space-grotesk-v15-latin-ext_latin-500.eot?#iefix')
-			format('embedded-opentype'),
-		/* IE6-IE8 */ url('../fonts/space-grotesk-v15-latin-ext_latin-500.woff2') format('woff2'),
-		/* Super Modern Browsers */ url('../fonts/space-grotesk-v15-latin-ext_latin-500.woff')
-			format('woff'),
-		/* Modern Browsers */ url('../fonts/space-grotesk-v15-latin-ext_latin-500.ttf')
-			format('truetype'),
-		/* Safari, Android, iOS */
-			url('../fonts/space-grotesk-v15-latin-ext_latin-500.svg#SpaceGrotesk') format('svg'); /* Legacy iOS */
-}
 
-/* space-grotesk-700 - latin-ext_latin */
-@font-face {
-	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-	font-family: 'Space Grotesk';
-	font-style: normal;
-	font-weight: 700;
-	src: url('../fonts/space-grotesk-v15-latin-ext_latin-700.eot'); /* IE9 Compat Modes */
-	src: url('../fonts/space-grotesk-v15-latin-ext_latin-700.eot?#iefix')
-			format('embedded-opentype'),
-		/* IE6-IE8 */ url('../fonts/space-grotesk-v15-latin-ext_latin-700.woff2') format('woff2'),
-		/* Super Modern Browsers */ url('../fonts/space-grotesk-v15-latin-ext_latin-700.woff')
-			format('woff'),
-		/* Modern Browsers */ url('../fonts/space-grotesk-v15-latin-ext_latin-700.ttf')
-			format('truetype'),
-		/* Safari, Android, iOS */
-			url('../fonts/space-grotesk-v15-latin-ext_latin-700.svg#SpaceGrotesk') format('svg'); /* Legacy iOS */
-}
-
-/* space-mono-regular - latin */
-@font-face {
-	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-	font-family: 'Space Mono';
-	font-style: normal;
-	font-weight: 400;
-	src: url('../fonts/space-mono-v12-latin-regular.eot'); /* IE9 Compat Modes */
-	src: url('../fonts/space-mono-v12-latin-regular.eot?#iefix') format('embedded-opentype'),
-		/* IE6-IE8 */ url('../fonts/space-mono-v12-latin-regular.woff2') format('woff2'),
-		/* Super Modern Browsers */ url('../fonts/space-mono-v12-latin-regular.woff') format('woff'),
-		/* Modern Browsers */ url('../fonts/space-mono-v12-latin-regular.ttf') format('truetype'),
-		/* Safari, Android, iOS */ url('../fonts/space-mono-v12-latin-regular.svg#SpaceMono')
-			format('svg'); /* Legacy iOS */
-}
 
 :root {
 	color-scheme: light dark;
